# Topologic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Topologic.sln  WindowsBuild.bat  build.py  conda_env_topologic_py310.yml  conda_env_topologic_py311.yml  conda_env_topologic_py312.yml  conda_env_topologic_py313.yml  conda_env_topologic_py314.yml  conda_env_topologic_py38.yml  conda_env_topologic_py39.yml  conda_env_topoplogic_py310.yml  vcpkg.json
.github/workflows/: build.yml  publish.yml
BuildConfigs/: OpenCascadeLibs.props  VendorBuildPaths.props
CMake/: DefaultCXX.cmake  Utils.cmake
Python-Bindings/: CMakeLists.txt  PythonBindingsBuild.bat  README.md
Python-Bindings/include/: Attribute.cppwg.hpp  Cell.cppwg.hpp  ContentManager.cppwg.hpp  DoubleAttribute.cppwg.hpp  Face.cppwg.hpp  FaceUtility.Binding.h  GlobalCluster.Binding.h  Shell.cppwg.hpp  Topology.cppwg.hpp  TopologyUtility.Binding.h  wrapper_header_collection.hpp
Python-Bindings/pybind/share/cmake/pybind11/: pybind11Config.cmake  pybind11ConfigVersion.cmake  pybind11Targets.cmake
Python-Bindings/src/: Aperture.cppwg.cpp  Cell.cppwg.cpp  CellComplex.cppwg.cpp  Cluster.cppwg.cpp  DoubleAttribute.cppwg.cpp  Edge.cppwg.cpp  Face.cppwg.cpp  FaceUtility.Binding.cpp  GlobalCluster.Binding.cpp  Graph.cppwg.cpp  Shell.cppwg.cpp  StringAttribute.cppwg.cpp  Topology.cppwg-Modified.cpp  Topology.cppwg.cpp  TopologyUtility.Binding.cpp  Vertex.cppwg.cpp  Wire.cppwg.cpp  WireUtility.Binding.cpp  main.cpp
Python-Bindings/test/: topologictest01.py  topologictest02.py
TopologicCore/: CMakeLists.txt  Doxyfile  TopologicConfig.h.in  TopologicCore.sln  TopologicCore.vcxproj  TopologicCore.vcxproj.filters
TopologicCore/TopologicCoreCppTest/: TopologicCoreCppTest.cpp  TopologicCoreCppTest.vcxproj  TopologicCoreCppTest.vcxproj.filters
TopologicCore/include/: About.h  Aperture.h  ApertureFactory.h  Attribute.h  AttributeManager.h  Bitwise.h  Cell.h  CellComplex.h  CellComplexFactory.h  CellFactory.h  Cluster.h  ClusterFactory.h  ContentManager.h  Context.h  ContextManager.h  Dictionary.h  DoubleAttribute.h  Edge.h  EdgeFactory.h  Face.h  FaceFactory.h  Geometry.h  GlobalCluster.h  Graph.h  InstanceGUIDManager.h  IntAttribute.h  Line.h  ListAttribute.h  NurbsCurve.h  NurbsSurface.h  PlanarSurface.h  Shell.h  ShellFactory.h  StringAttribute.h  Surface.h  TopologicalQuery.h  Topology.h  TopologyFactory.h  TopologyFactoryManager.h  Utilities.h  (+4 more)
TopologicCore/include/Utilities/: CellUtility.h  Direction.h  EdgeUtility.h  FaceUtility.h  Guid.h  ShellUtility.h  TopologyUtility.h  TransformationMatrix2D.h  Vector.h  VertexUtility.h  WireUtility.h
TopologicCore/src/: About.cpp  Aperture.cpp  ApertureFactory.cpp  AttributeManager.cpp  Bitwise.cpp  Cell.cpp  CellComplex.cpp  CellComplexFactory.cpp  CellFactory.cpp  Cluster.cpp  ClusterFactory.cpp  ContentManager.cpp  Context.cpp  ContextManager.cpp  Dictionary.cpp  DoubleAttribute.cpp  Edge.cpp  EdgeFactory.cpp  Face.cpp  FaceFactory.cpp  Geometry.cpp  GlobalCluster.cpp  Graph.cpp  InstanceGUIDManager.cpp  IntAttribute.cpp  Line.cpp  ListAttribute.cpp  NurbsCurve.cpp  NurbsSurface.cpp  PlanarSurface.cpp  Shell.cpp  ShellFactory.cpp  StringAttribute.cpp  Surface.cpp  Topology.cpp  TopologyFactoryManager.cpp  Utilities.cpp  Vertex.cpp  VertexFactory.cpp  Wire.cpp  (+1 more)
TopologicCore/src/Utilities/: CellUtility.cpp  Direction.cpp  EdgeUtility.cpp  FaceUtility.cpp  Guid.cpp  ShellUtility.cpp  TopologyUtility.cpp  TransformationMatrix2D.cpp  Vector.cpp  VertexUtility.cpp  WireUtility.cpp
TopologicPythonBindings/: CMakeLists.txt  build_linux.py  build_linux.sh  build_macos.py  build_macos.sh  build_windows.py  build_windows_conda.bat  build_windows_conda.py  repair_wheel_linux.py  repair_wheel_macos.py  repair_wheel_windows.py  setup.py
TopologicPythonBindings/include/: Aperture.cppwg.hpp  CellComplex.cppwg.hpp  CellUtility.Binding.h  Cluster.cppwg.hpp  Context.cppwg.hpp  Dictionary.cppwg.hpp  Edge.cppwg.hpp  EdgeUtility.Binding.h  Graph.cppwg.hpp  IntAttribute.cppwg.hpp  ListAttribute.cppwg.hpp  ShellUtility.Binding.h  StringAttribute.cppwg.hpp  TopologicalQuery.cppwg.hpp  Vertex.cppwg.hpp  VertexUtility.Binding.h  Wire.cppwg.hpp  WireUtility.Binding.h  wrapper_header_collection.hpp
TopologicPythonBindings/python/topologic_core/: __init__.py
TopologicPythonBindings/src/: Aperture.cppwg.cpp  Attribute.cppwg.cpp  Cell.cppwg.cpp  CellComplex.cppwg.cpp  CellUtility.Binding.cpp  Cluster.cppwg.cpp  ContentManager.cppwg.cpp  Context.cppwg.cpp  Dictionary.cppwg.cpp  EdgeUtility.Binding.cpp  Face.cppwg.cpp  FaceUtility.Binding.cpp  Graph.cppwg.cpp  IntAttribute.cppwg.cpp  ListAttribute.cppwg.cpp  Shell.cppwg.cpp  ShellUtility.Binding.cpp  TopologicalQuery.cppwg.cpp  Topology.cppwg.cpp  Vertex.cppwg.cpp  VertexUtility.Binding.cpp  Wire.cppwg.cpp  WireUtility.Binding.cpp  main.cpp
TopologicPythonBindings/test/: topologictest01.py  topologictest02.py
output/x64/Release/: TopologicCore.exp  TopologicCore.lib
recipe/: README.md  build_linux_x86_64_conda.sh  build_linux_x86_64_noconda.sh  build_macos_arm64_conda.sh  build_macos_arm64_noconda.sh  build_manylinux2014_x86_64.sh  build_win_amd64_conda.bat  build_win_amd64_noconda.bat
